<resources>
    <string name="app_name">Gerenciador de Eventos</string>

    <!--Others texts-->
    <string name="wellcome">Seja bem-vindo(a):</string>
    <string name="contact1">Pedro Silva Santos</string>

    <!--Forms - TextView Labels-->
    <string name="user">Usuário:</string>
    <string name="userEmpresa">Usuário da empresa:</string>
    <string name="password">Senha:</string>
    <string name="confirm_password">Confirmar a Senha:</string>

    <string name="name">Nome:</string>
    <string name="email">Email::</string>
    <string name="emailEmpresa">Email da Empresa::</string>

    <string name="passwordEmpresa">Senha:</string>
    <string name="confirm_passwordEmpresa">Confirmar a Senha:</string>
    <string name="txt_eventos_solicitados">Lista de Eventos Solicitados</string>
    <string name="txt_meus_eventos_solicitados">Meus Eventos Solicitados</string>


    <!--Forms - Buttons-->
    <string name="login">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Voltar</string>
    <string name="fornecedor">Fornecedor de Serviço</string>
    <string name="cliente">Cliente</string>
    <string name="eventoempresa">Evento para empresas</string>
    <string name="formatura">Formatura</string>
    <string name="quinzeanos">15 anos</string>
    <string name="casamento">Casamento</string>
    <string name="aceitarEventos">Aceitar</string>
    <string name="recusarEvento">Recusar</string>


</resources>